--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,31 @@
 			<version>5.0.2.RELEASE</version>
 		</dependency>
 
-		<!-- Dependency for JSTL to be added -->
-		
-		<!-- Dependency for jaxb-api to be added(if using JDK9) -->
+	  <!-- Dependency for JSTL to be added -->
+	  <!-- https://mvnrepository.com/artifact/jstl/jstl -->
 
-		<!-- Dependency for jaxb-impl to be added(if using JDK9) -->
+	  <dependency>
+		  <groupId>jstl</groupId>
+		  <artifactId>jstl</artifactId>
+		  <version>1.2</version>
+	  </dependency>
+
+
+	  <!-- Dependency for jaxb-api to be added(if using JDK9) -->
+	  <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+	  <dependency>
+		  <groupId>javax.xml.bind</groupId>
+		  <artifactId>jaxb-api</artifactId>
+		  <version>2.3.1</version>
+	  </dependency>
+
+	  <!-- Dependency for jaxb-impl to be added(if using JDK9) -->
+	  <!-- https://mvnrepository.com/artifact/javax.xml/jaxb-impl -->
+	  <dependency>
+		  <groupId>javax.xml</groupId>
+		  <artifactId>jaxb-impl</artifactId>
+		  <version>2.1</version>
+	  </dependency>
 
 		<!-- Dependency for Spring Test to be added -->
 
